___________________________________________________________________________

 *** November 2012:  LLAMAComm (v. 2.16) (MATLAB R2011a)
     - Some minor efficiency improvements
     - Fixed bug in simulator/@module/AllSameTxFc.m that cause the second output
       argument "ftout" to not be assigned in all circumstances
     - If called with a single input argument, UpdateTimingDiagram.m is 
       functionally equivalent to "drawnow"
     - Removed the unused "user" parameter from DefaultTDCallback. UpdateTimingDiagram
       was modified to act appropriately *if* a trailing user parameter structure is accepted
       by the timing diagram callback function.
     - Modified 'simulator/Main.m' was modified by adding a new global variable 
       'saveDirIsAvailable'. This is to support running llamacomm on a cluster
       (e.g. LLGRID). 
     - Fixed bug in RunArbitrator.m related to genie nodes that caused simulation to stall
     - Added multicast capability to genie nodes. Genie transmit module 
       "to Node"/"to Module" may be now be (equal sized) cell arrays. Data is
       delivered to the genie queue for each specified node/module address.
___________________________________________________________________________

 *** September 2012:  LLAMAComm (v. 2.15) (MATLAB R2011a)
     - Modified InitGlobals.m by adding a new global variable 
       'timingDiagramShowExecOrder' that controls whether or not execution
       order is displayed in the timing diagram.
     - Modified simulator/@node/node.m by adding a new property to node 
       objects: 'isCritical' that indicates if the node is critical to 
       the simulation. Note that nodes are critical by default. 
       Also added node methods 'IsCritical' and 'ShutdownNode' 
       to exploit this functionality.
     - Modified simulator/@node/RunArbitrator.m to make use of new 'isCritical'
       node property. If only non-critical nodes are running, they are 